fix footer contrast

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -243,7 +243,7 @@ form button.submitBtn,
 footer a,
 footer a:visited,
 form button.submitBtn {
-    color: white;
+    color: black;
 }
 
 .contact-el {
